result.txt
    Checking planetarium v0.3.1 (D:\Projects\src\github.com\teratron\planetarium)
error[E0277]: `model::AudioSettings` is not a `Resource`
   --> src\framework\audio\mod.rs:15:29
    |
 15 |         app.init_resource::<AudioSettings>();
    |             -------------   ^^^^^^^^^^^^^ invalid `Resource`
    |             |
    |             required by a bound introduced by this call
    |
help: the trait `bevy::prelude::Resource` is not implemented for `model::AudioSettings`
   --> src\framework\settings\model.rs:72:1
    |
 72 | pub struct AudioSettings {
    | ^^^^^^^^^^^^^^^^^^^^^^^^
    = note: consider annotating `model::AudioSettings` with `#[derive(Resource)]`
    = help: the following other types implement trait `bevy::prelude::Resource`:
              AccessibilityRequested
              AccumulatedMouseMotion
              AccumulatedMouseScroll
              ActiveSettingsTab
              AppMetadata
              AppPaths
              AppTypeRegistry
              AssetLoadingState
            and 280 others
note: required by a bound in `bevy::prelude::App::init_resource`
   --> C:\Users\Oleg\.cargo\registry\src\index.crates.io-1949cf8c6b5b557f\bevy_app-0.18.0\src\app.rs:469:29
    |
469 |     pub fn init_resource<R: Resource + FromWorld>(&mut self) -> &mut Self {
    |                             ^^^^^^^^ required by this bound in `App::init_resource`

For more information about this error, try `rustc --explain E0277`.
error: could not compile `planetarium` (lib) due to 1 previous error
